--- a/SmartHotelBooking/appsettings.json
+++ b/SmartHotelBooking/appsettings.json
@@ -6,9 +6,9 @@
         }
     },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=LTIN620175\\SQLEXPRESS;Database=RoomsHotel;Trusted_Connection=True;TrustServerCertificate=True"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-H65TGF7\\SQLEXPRESS;Database=RoomsHotel;Trusted_Connection=True;TrustServerCertificate=True"
+  },
     "Jwt": {
         "Key": "bbuosyJSSGPOosflUSJ75JJHst6yjjjST5rt65SY77uhSYSko098HHhgst",
         "Issuer": "http://localhost",
